# AetherAI

./: CMakeLists.txt  CMakePresets.json
.claude/: settings.local.json
.superpowers/brainstorm/1325-1778034613/content/: architecture-approaches.html  gpu-driven-pipeline.html  module-architecture.html  resources-layer.html  rhi-design.html  shaders-layer-v2.html  shaders-layer.html
.superpowers/brainstorm/1325-1778034613/state/: server-stopped
docs/superpowers/plans/: 2026-05-06-aether-render-engine-implementation.md  2026-05-06-p0-rhi-consolidation.md
docs/superpowers/specs/: 2026-05-06-aether-render-engine-design.md  2026-05-06-p0-rhi-consolidation-design.md
examples/gltf_viewer/: CMakeLists.txt  main.cpp
examples/slang_triangle/: CMakeLists.txt  main.cpp
examples/slang_triangle/shaders/: triangle.slang
examples/sponza_viewer/: CMakeLists.txt  main.cpp
examples/triangle/: CMakeLists.txt  main.cpp
src/Aether.Core/: CMakeLists.txt
src/Aether.Core/src/: aether.core.cppm  log_impl.cpp  math_impl.cpp  thread_pool.cpp
src/Aether.Gltf/: CMakeLists.txt
src/Aether.Gltf/src/: aether.gltf.cppm  gltf_importer.cpp
src/Aether.RHI/: CMakeLists.txt
src/Aether.RHI/D3D12/: command_list_d3d12.cpp  command_list_d3d12_impl.h  d3d12_common.h  device_d3d12.cpp  device_d3d12_impl.h  pipeline_d3d12.cpp  pipeline_d3d12_impl.h  resource_d3d12.cpp  resource_d3d12_impl.h  swapchain_d3d12.cpp
src/Aether.RHI/src/: aether.rhi.cppm
src/Aether.Renderer/: CMakeLists.txt
src/Aether.Renderer/src/: aether.renderer.cppm  gpu_culling.cpp  gpu_scene.cpp  indirect_draw.cpp  render_scene.cpp  scene_manager.cpp
src/Aether.Renderer/src/components/: camera_component.cpp  light_component.cpp  mesh_component.cpp
src/Aether.Resources/: CMakeLists.txt
src/Aether.Resources/src/: aether.resources.cppm  resource_loader.cpp
src/Aether.Shaders/: CMakeLists.txt
src/Aether.Shaders/src/: aether.shaders.cppm  shader_compiler.cpp  shader_library.cpp  slang_backend.cpp  slang_backend.h
src/Shaders/: aether_shaders.slang
